# pacman

./: CMakeLists.txt  README.md
docs/: Architecture.md
src/: creatures.cpp  creatures.hpp  field.cpp  field.hpp  game_state.cpp  game_state.hpp  main.cpp  paths.hpp
